<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/music_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/music_name"
            android:textSize="14sp"
            android:textColor="@drawable/local_song"/>

        <TextView
            android:id="@+id/music_singer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/singer"
            android:textSize="14sp"
            android:textColor="@drawable/local_song"/>

        <TextView
            android:id="@+id/music_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/album"
            android:textSize="14sp"
            android:textColor="@drawable/local_song"/>

        <TextView
            android:id="@+id/music_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/folder"
            android:textSize="14sp"
            android:textColor="@drawable/local_song"/>
    </LinearLayout>

    <View
        android:id="@+id/slider"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />
</LinearLayout>