<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#a7e2e2e2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/listview_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/z4"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/form_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/left_brackets" />

            <TextView
                android:id="@+id/form_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/right_brackets" />
        </LinearLayout>

        <ImageView
            android:id="@+id/form_setup"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/a26" />
    </LinearLayout>

    <ListView
        android:id="@+id/music_bottom_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/list_divider"
        android:dividerHeight="0.5dp" />
</LinearLayout>